--- a/css/style.css
+++ b/css/style.css
@@ -3623,7 +3623,9 @@
   border: 2px solid #dc143c;
   overflow: hidden;
   place-items: center;
-  padding: 10vh 5vw;
+  padding: 5vh 5vw;
+  margin: 5vh 5vw;
+  border-radius: 0.125rem;
 }
 .repeat-section h2 {
   color: #b3c0cc;
