--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -6,8 +6,7 @@
 }
 
 .design-section {
-    min-height: 80vh;
-    display: grid;
+    min-height: 85vh;
     .box {
         isolation: isolate;
         position: relative;
@@ -23,6 +22,8 @@
 
 .contrast-section {
     // border: 4px solid yellow;
+    height: 80vh;
+    display: grid;
     place-items: center;
     background: $overlay-blue-darkest;
 
@@ -75,11 +76,13 @@
 }
 
 .repeat-section {
+    height: 80vh;
+    display: grid;
+    place-items: center;
     border: 2px solid $span-crimson;
     overflow: hidden;
-    place-items: center;
     padding: 5vh 5vw;
-    margin: 5vh 5vw;
+    margin: 10vh 5vw;
     border-radius: .125rem;
     h2 {
         color: $brand;
@@ -123,4 +126,58 @@
         }
     }
 
+}
+
+.align-section {
+    // border: 2px solid blue;
+    padding: 10vh 5vw;
+    height: 80vh;
+    max-height: 550px;
+    background: $overlay-blue-darkest;
+    .box {
+        border: 2px solid $brand;
+        // display: flex;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        max-width: 400px;
+        margin-inline: auto;
+        
+        h2 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $text-light;
+            letter-spacing: -.05rem;
+        }
+
+        h3 {
+            position: absolute;
+            opacity: .1;
+            text-transform: uppercase;
+            font-size: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            &:nth-child(2){
+                writing-mode: vertical-rl;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            &:nth-child(3){
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+            &:nth-child(4){
+                writing-mode: vertical-lr;
+                transform: rotate(180deg);
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+
+    }
 }
