--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -16,7 +16,6 @@
     h2 {
         text-transform: uppercase;
         font-size: 2.25rem;
-        color: #ddd;
     }
 }
 
@@ -135,7 +134,8 @@
     max-height: 550px;
     background: $overlay-blue-darkest;
     .box {
-        border: 2px solid $brand;
+        background: $overlay-blue-darker;
+        // border: 2px solid $brand;
         // display: flex;
         position: relative;
         height: 100%;
@@ -220,5 +220,53 @@
             }
         }
 
+    }
+}
+
+.prox-section {
+    padding: 10vh 5vw;
+    display: grid;
+    place-items: center;
+
+    .box {
+        display: grid;
+        gap: 5vh;
+        text-align: center;
+        @include lg {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10vw;
+            position: relative;
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: -10vh;
+                left: 0;
+                width: 100%;
+                height: .25rem;
+                background: linear-gradient(90deg, transparent, #fff1, transparent);
+            }
+        }
+    }
+
+    h2 {
+        margin-bottom: 1rem;
+        letter-spacing: -.05rem;
+        text-transform: lowercase;
+    }
+    p {
+        font-weight: 400;
+        text-transform: uppercase;
+    }
+
+    .item-1 {
+        color: $brand;
+    }
+    .item-2 {
+        color: $text-light;
+    }
+    .item-3 {
+        color: $brand;
     }
 }
