--- a/css/style.css
+++ b/css/style.css
@@ -3760,7 +3760,7 @@
 }
 .prox-section .box {
   display: grid;
-  gap: 5vh;
+  gap: 2rem;
   text-align: center;
 }
 @media (min-width: 820px) {
@@ -3795,7 +3795,7 @@
   transition: 1s ease;
 }
 .prox-section .prox-item.io-item p {
-  opacity: 0;
+  opacity: 0.8;
   transform: translateY(1rem);
   transition: 1s ease;
 }
