--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -224,7 +224,7 @@
 
     .box {
         display: grid;
-        gap: 5vh;
+        gap: 2rem;
         text-align: center;
         @include lg {
             display: flex;
@@ -253,7 +253,7 @@
         font-weight: 400;
         text-transform: uppercase;
     }
-
+    // IO CLASS
     .prox-item {
         &.io-item {
             h2 {
@@ -262,7 +262,7 @@
             }
 
             p {
-                opacity: 0;
+                opacity: .8;
                 transform: translateY(1rem);
                 transition: 1s ease;
             }
