--- a/css/style.css
+++ b/css/style.css
@@ -3563,14 +3563,14 @@
 }
 
 .design-section {
-  min-height: 85vh;
+  height: 95vh;
   padding: 10vh 5vw;
+  overflow: hidden;
 }
 .design-section .box {
   isolation: isolate;
   position: relative;
   border-radius: 0.125rem;
-  padding: 0.25rem 0.5rem;
 }
 .design-section h2 {
   text-transform: uppercase;
@@ -3578,18 +3578,51 @@
 }
 
 .contrast-section {
-  height: 80vh;
-  display: grid;
-  place-items: center;
-  place-content: center;
-  gap: 5vh;
-  background: #15191e;
+  background: #000;
+  position: relative;
+  isolation: isolate;
+}
+.contrast-section img {
+  position: absolute;
+  width: 100%;
+  height: 95%;
+  top: 5vh;
+  left: 0;
+  object-fit: cover;
+  object-position: 30%;
+  z-index: -1;
+  opacity: 0.7;
+}
+@media (min-width: 820px) {
+  .contrast-section img {
+    object-fit: contain;
+    object-position: 70%;
+    display: none;
+  }
+}
+@media (min-width: 820px) {
+  .contrast-section {
+    background: url("../img/face_600.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 60%;
+    background-attachment: fixed;
+    background-color: #000;
+  }
+  .contrast-section::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: #0007;
+    z-index: -1;
+  }
 }
 .contrast-section .box {
   isolation: isolate;
   position: relative;
-  border-radius: 0.25rem;
-  padding: 0.25rem 1rem;
+  border-radius: 0.125rem;
+  width: max-content;
+  margin-bottom: 1rem;
 }
 .contrast-section .box::after {
   content: "";
@@ -3600,20 +3633,23 @@
   z-index: -1;
   border-radius: inherit;
   transition: 1.5s ease;
-  animation: con-box 5s infinite;
+  animation: con-box 10s infinite;
 }
 @keyframes con-box {
   50% {
-    transform: translateX(2.5rem);
+    transform: translateX(5vw);
+  }
+  0%, 100% {
+    transform: translateX(-2.5vw);
   }
 }
 .contrast-section .box h2 {
   text-transform: uppercase;
-  font-size: 2.25rem;
+  font-size: 4vw;
+  font-size: clamp(2.25rem, 4vw, 4rem);
   color: #f4f4f4;
   mix-blend-mode: difference;
   transition: 1.5s;
-  animation: con-h2 5s infinite;
 }
 @keyframes con-h2 {
   50% {
@@ -3621,11 +3657,11 @@
   }
 }
 .contrast-section p {
-  text-transform: lowercase;
   color: #f4f4f4;
-  text-align: center;
   text-transform: capitalize;
   font-weight: 200;
+  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.125rem);
 }
 
 .repeat-section {
