--- a/css/style.css
+++ b/css/style.css
@@ -3563,7 +3563,7 @@
 }
 
 .design-section {
-  height: 95vh;
+  height: 90vh;
   padding: 10vh 5vw;
   overflow: hidden;
 }
@@ -3591,7 +3591,7 @@
   object-fit: cover;
   object-position: 30%;
   z-index: -1;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 @media (min-width: 820px) {
   .contrast-section img {
@@ -3629,7 +3629,7 @@
   position: absolute;
   inset: 0;
   background: #b3c0cc;
-  background: #ddd;
+  background: #f4f4f4;
   z-index: -1;
   border-radius: inherit;
   transition: 1.5s ease;
