--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -7,7 +7,7 @@
 }
 
 .design-section {
-    height: 95vh;
+    height: 90vh;
     padding: 10vh 5vw;
     overflow: hidden;
     .box {
@@ -37,7 +37,7 @@
         object-fit: cover;
         object-position: 30%;
         z-index: -1;
-        opacity: .7;
+        opacity: .5;
         @include lg {
             object-fit: contain;
             object-position: 70%;
@@ -71,7 +71,7 @@
             position: absolute;
             inset: 0;
             background: $brand;
-            background: #ddd;
+            background: #f4f4f4;
             z-index: -1;
             border-radius: inherit;
             transition: 1.5s ease;
