--- a/css/style.css
+++ b/css/style.css
@@ -870,20 +870,42 @@
 }
 
 .hero {
-  color: #fff;
+  color: #f4f4f4;
+  text-transform: capitalize;
+}
+.hero h1 {
+  font-size: 1rem;
+  font-size: clamp(1rem, 2.5vw, 1.25rem);
+  font-weight: 200;
+  margin-bottom: 0.5rem;
+}
+.hero h2 {
+  font-size: 2rem;
+  font-size: clamp(2rem, 5vw, 2.5rem);
+  letter-spacing: -0.05rem;
+}
+.hero p {
+  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.125rem);
+}
+.hero a {
+  color: inherit;
+}
+.hero span {
+  color: #b3c0cc;
 }
 .hero .hero-content {
+  border: 1px solid #fff;
   background: transparent;
   padding: 5vh 5vw;
   position: relative;
   top: 5vh;
   width: 100%;
-  text-transform: capitalize;
 }
 @media (min-width: 768px) {
   .hero .hero-content {
     width: max-content;
-    top: 5vh;
+    top: 10vh;
   }
 }
 @media (min-width: 1024px) {
@@ -891,105 +913,19 @@
     top: 15vh;
   }
 }
-.hero .hero-content .hero-title {
-  margin-bottom: 0.25rem;
-  width: 100%;
-}
-.hero .hero-content .hero-title .hero-title-header {
-  line-height: 1.25;
-  font-size: 0.95rem;
-  font-size: clamp(.95rem, 2vw, 1.1rem);
-  font-weight: 400;
-  color: #b3c0cc;
-}
-.hero .hero-content .hero-title .hero-title-header a {
-  color: inherit;
-  font-size: inherit;
-}
-@keyframes header {
-  0%, 20% {
-    opacity: 1;
-    transform: translateY(1rem);
-  }
-  50% {
-    transform: translateY(0rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-.hero .hero-content .hero-title .hero-description {
-  text-transform: capitalize;
-  text-align: center;
-  text-align: left;
-  line-height: 1.25;
-  font-family: "Kanit", sans-serif;
-  font-weight: 500;
-  font-size: 2.25rem;
-  font-size: clamp(2.25rem, 6vw, 3rem);
-  font-size: clamp(2.5rem, 6vw, 3rem);
-  color: #f4f4f4;
-}
-@keyframes name {
-  0%, 15% {
-    opacity: 1;
-    transform: translateY(1rem);
-  }
-  50% {
-    transform: translateY(0rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@media (min-width: 1024px) {
-  .hero .hero-content .hero-title {
-    top: 15vh;
-  }
-  .hero .hero-content .hero-title p {
-    text-align: center;
-    text-align: left;
-  }
-}
 .hero .hero-content .hero-meta-description {
-  display: inline-block;
-  font-size: 1.25rem;
-  font-size: clamp(1.25rem, 2.25vw, 1.5rem);
-  position: relative;
   color: #b3c0cc;
-  margin-top: 0.5rem;
-  font-family: "Montserrat", sans-serif;
-}
-@keyframes meta {
-  0%, 20% {
-    transform: translateY(1rem);
-    opacity: 1;
-  }
-  50% {
-    transform: translateX(0rem);
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
+  margin-top: 1rem;
 }
 .hero .hero-cta {
   background: #dc143c;
   margin: 20vh 0 0;
   position: relative;
   display: block;
-  text-align: left;
   padding: 0.5em 2rem 0.5rem 1rem;
-  width: auto;
   width: max-content;
   border-radius: 1rem;
-  border: none;
-  outline: none;
-  animation-fill-mode: forwards;
-  transition: 0.3s linear;
-  cursor: pointer;
+  transition: 0.25s linear;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
   z-index: 2;
 }
@@ -1003,43 +939,17 @@
     margin: 20vh 0 0;
   }
 }
-@media (min-width: 768px) {
-  .hero .hero-cta {
-    font-size: 1.5em;
-    width: 20rem;
-    text-align: center;
-    margin: 25vh 0 0;
-  }
-}
-@media (min-width: 1024px) {
+@media (min-width: 820px) {
   .hero .hero-cta {
     margin: 15vh 0 0;
-  }
-}
-@keyframes show-cta {
-  0%, 30% {
-    opacity: 1;
-    transform: translateX(1rem);
-  }
-  50% {
-    transform: translateX(0);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
   }
 }
 .hero .hero-cta::before, .hero .hero-cta::after {
   position: absolute;
   content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   border-radius: 1rem;
-  transition: 0.3s ease;
-  border: none;
-  outline: none;
+  transition: 0.25s ease;
 }
 .hero .hero-cta::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
@@ -1048,11 +958,8 @@
 .hero .hero-cta::after {
   opacity: 1;
   z-index: -1;
-  animation: 3s cta-btn infinite;
-  animation-delay: 6s;
-  transition: 0.3s;
-  outline: none;
-  border: none;
+  animation: 1s cta-btn infinite;
+  transition: 0.25s;
   background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
@@ -1061,14 +968,12 @@
   display: inline-block;
   text-transform: none;
   color: #f4f4f4;
-  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
+  font-size: clamp(2rem, 5vw, 2.5rem);
   font-weight: 500;
   animation: animate 3s ease-in-out infinite;
-  animation-delay: calc(4s + .2s * var(--i));
-  animation-delay: calc(2s + .2s * var(--i));
+  animation-delay: calc(1s + .2s * var(--i));
   /* cta keyframes*/
-  /* end of cta keyframes*/
 }
 @keyframes animate {
   0% {
@@ -1112,16 +1017,11 @@
   padding: 5vh 5vw;
   position: relative;
   top: 10vh;
-  color: #fff;
-  text-transform: capitalize;
 }
 @media (min-width: 1024px) {
   .hero .hero-index-content {
     top: 20vh;
   }
-}
-.hero .hero-index-content span {
-  color: #b3c0cc;
 }
 .hero .hero-index-content .content-title {
   margin-bottom: 25vh;
@@ -1130,23 +1030,6 @@
   .hero .hero-index-content .content-title {
     margin-bottom: 5vh;
   }
-}
-.hero .hero-index-content .content-title h1 {
-  font-size: 1rem;
-  font-size: clamp(1rem, 2vw, 1.115rem);
-  font-weight: 200;
-  margin-bottom: 0.5rem;
-}
-.hero .hero-index-content .content-title h2 {
-  font-size: 2rem;
-  font-size: clamp(2rem, 5vw, 2.5rem);
-  letter-spacing: -0.05rem;
-}
-.hero .hero-index-content .content-value p {
-  color: #fff;
-  font-weight: 500;
-  font-size: 1rem;
-  font-size: clamp(1rem, 2vw, 1.115rem);
 }
 .hero .hero-index-content .content-value .cta {
   width: 12rem;
@@ -1159,12 +1042,9 @@
 }
 .hero .hero-index-content .content-value .cta .btn {
   width: 100%;
-  color: #fff;
   padding: 1rem;
-  font-size: 1rem, 3vw, 1.25rem;
-}
-.hero .hero-index-content .content-value .cta .btn i {
-  color: #fff;
+  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.125rem);
 }
 .hero .hero-index-content .content-value .cta .btn::before {
   background: linear-gradient(0deg, #750b20, #dd134c);
@@ -1203,313 +1083,6 @@
   }
 }
 
-.skills-hero {
-  background: #29323d;
-  display: flex;
-  align-items: center;
-}
-.skills-hero .skills-menu {
-  margin-left: clamp(4rem, 20vw, 48rem);
-  z-index: 2;
-}
-.skills-hero .skills-menu .menu-item {
-  font-size: clamp(2.5rem, 8vw, 5rem);
-  color: #f4f4f4;
-  display: block;
-  padding: clamp(.25rem, .5vw, 1rem) 0rem;
-}
-.skills-hero .skills-menu .menu-background {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background-image: radial-gradient(rgba(255, 255, 255, 0.1) 9%, transparent 9%);
-  background-position: 0% 0%;
-  background-size: 12vmin 12vmin;
-  transition: opacity 800ms ease, background-size 800ms ease;
-  transition: all 800ms ease;
-}
-.skills-hero .skills-menu:hover .menu-item {
-  opacity: 0.3;
-}
-.skills-hero .skills-menu:hover .menu-item:hover {
-  opacity: 1;
-}
-.skills-hero .skills-menu:hover .menu-background {
-  background-size: 11vmin 11vmin;
-  opacity: 0.5;
-}
-.skills-hero .skills-menu[data-active-index="0"] .menu-background {
-  background-position: 0% -25%;
-}
-.skills-hero .skills-menu[data-active-index="1"] .menu-background {
-  background-position: 0% -50%;
-}
-.skills-hero .skills-menu[data-active-index="2"] .menu-background {
-  background-position: 0% -75%;
-}
-.skills-hero .skills-menu[data-active-index="3"] .menu-background {
-  background-position: 0% -100%;
-}
-
-#menu {
-  min-height: 100vh;
-  padding: 0;
-  z-index: 5;
-}
-#menu .menu-section {
-  border-bottom: 2px solid #000;
-  height: 100vh;
-  padding: 10vh 0;
-  background-color: #29323d;
-  position: relative;
-  text-align: center;
-  text-align: left;
-  isolation: isolate;
-}
-#menu .menu-section .menu-img figure {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-#menu .menu-section .menu-img figure img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-#menu .menu-section .menu-img.io-item img {
-  transform: scale(0.5);
-  transition: 0.3s;
-}
-#menu .menu-section .menu-img.active-item figure.fig-response {
-  animation: responseTransition 5s infinite;
-}
-@keyframes responseTransition {
-  5% {
-    transform: scaleY(140%);
-  }
-  30% {
-    transform: scaleX(110%);
-  }
-  40% {
-    transform: scaleY(1);
-  }
-}
-#menu .menu-section .menu-img.active-item figure.fig-js img {
-  filter: drop-shadow(0 0.5rem 0.15rem #000);
-  transform-style: preserve-3d;
-  animation: cssTransition 3s infinite;
-}
-@keyframes cssTransition {
-  50% {
-    filter: drop-shadow(0.5rem 1rem 0.25rem rgba(0, 0, 0, 0.25));
-    transform: rotateY(10deg) scale(1.08);
-  }
-}
-#menu .menu-section .menu-img.active-item figure.fig-css img {
-  animation: imageTransition 3s infinite;
-  filter: drop-shadow(0.5rem 0.5rem 0.15rem #000);
-  transform-style: preserve-3d;
-  transition: 1s;
-}
-@keyframes imageTransition {
-  50% {
-    filter: drop-shadow(0 1rem 0.25rem #000);
-    transform: translateY(-2rem) rotateY(10deg);
-  }
-}
-#menu .menu-section .menu-img.active-item img {
-  transition: 1s ease-out;
-  transform: scale(1);
-}
-#menu .menu-section .menu-content .menu-title {
-  overflow: hidden;
-}
-#menu .menu-section .menu-content .menu-title h2 {
-  text-transform: capitalize;
-  color: #fff;
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-}
-#menu .menu-section .menu-content .menu-title p {
-  color: #f4f4f4;
-}
-#menu .menu-section .menu-content .menu-title.io-item h2 {
-  opacity: 0;
-  transform: translateY(5vh);
-  transition: 0.3s;
-}
-#menu .menu-section .menu-content .menu-title.io-item p {
-  opacity: 0;
-  transform: translateY(-5vh);
-  transition: 0.3s;
-}
-#menu .menu-section .menu-content .menu-title.active-item h2 {
-  opacity: 1;
-  transform: translateY(0);
-  transition: 1s;
-}
-#menu .menu-section .menu-content .menu-title.active-item p {
-  opacity: 1;
-  transform: translateY(0);
-  transition: 1s;
-}
-#menu .menu-section .menu-content .menu-cta .btn {
-  color: #ead2a1;
-  display: none;
-}
-#menu .menu-section .menu-content .menu-cta .page-btn {
-  width: 10rem;
-  color: #fff;
-  text-transform: capitalize;
-  border: none;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  letter-spacing: 0.05rem;
-  text-align: center;
-  transition: 0.25s;
-  position: relative;
-  isolation: isolate;
-}
-#menu .menu-section .menu-content .menu-cta .page-btn::before, #menu .menu-section .menu-content .menu-cta .page-btn::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.25s;
-  border-radius: 0.5rem;
-  z-index: -1;
-}
-#menu .menu-section .menu-content .menu-cta .page-btn::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-}
-#menu .menu-section .menu-content .menu-cta .page-btn::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
-  opacity: 0;
-}
-@media (min-width: 820px) {
-  #menu .menu-section .menu-content .menu-cta .page-btn {
-    width: 15rem;
-    padding: 0.7rem 1rem;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn:hover {
-    transform: scale(0.98);
-    letter-spacing: normal;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn:hover::before {
-    opacity: 0;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn:hover::after {
-    opacity: 1;
-  }
-}
-@media (max-width: 820px) {
-  #menu .menu-section .menu-content .menu-cta .page-btn:active {
-    transform: scale(0.98) translateX(-50%);
-    letter-spacing: normal;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn:active::before {
-    opacity: 0;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn:active::after {
-    opacity: 1;
-  }
-}
-@media (max-width: 1024px) {
-  #menu .menu-section .menu-img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 19rem;
-    height: 19rem;
-  }
-  #menu .menu-section .menu-content .menu-title {
-    text-align: center;
-  }
-  #menu .menu-section .menu-content .menu-cta {
-    position: absolute;
-    bottom: 20vh;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 19rem;
-    display: flex;
-    justify-content: space-between;
-    gap: 0.5rem;
-  }
-  #menu .menu-section .menu-content .menu-cta .btn {
-    width: 100%;
-  }
-  #menu .menu-section .menu-content .menu-cta .page-btn {
-    position: absolute;
-    bottom: -10vh;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-@media (min-width: 1024px) {
-  #menu .menu-section {
-    background-size: 50%;
-    background-position: right;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-  }
-  #menu .menu-section .menu-img {
-    position: absolute;
-    right: 5vw;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 45%;
-    height: 50%;
-    border-radius: 0.5rem;
-  }
-  #menu .menu-section .menu-img figure {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  #menu .menu-section .menu-img figure img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-  #menu .menu-section .menu-content {
-    width: 50%;
-    text-align: center;
-    position: relative;
-    top: 15vh;
-  }
-  #menu .menu-section .menu-content .menu-title h2 {
-    font-size: 2rem;
-  }
-  #menu .menu-section .menu-content .menu-cta {
-    position: relative;
-    top: 20vh;
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  #menu .menu-section .menu-content .menu-cta .btn {
-    width: 10rem;
-  }
-  #menu .menu-section::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.3);
-    z-index: -1;
-  }
-}
-
 .skills-section {
   padding: 10vh 0 0;
 }
@@ -1536,7 +1109,7 @@
 }
 .skills-section .skills-content .skills-intro .skills-article p {
   font-size: 0.95rem;
-  font-size: clamp(.95rem, 2vw, 1.1rem);
+  font-size: clamp(1rem, 2vw, 1.125rem);
   font-weight: 500;
   line-height: 1.6;
   overflow: hidden;
@@ -1589,7 +1162,7 @@
   text-align: left;
   color: #ead2a1;
   font-size: 1rem;
-  font-size: clamp(.95rem, 2vw, 1.1rem);
+  font-size: clamp(1rem, 2vw, 1.125rem);
 }
 .skills-section .skills-content .skills-intro .skills-drop .skills-drop-p {
   font-weight: 500;
