--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'footer';
 @import 'design';
 @import 'form';
+
 *, ::before, ::after {
     padding: 0;
     margin: 0;
@@ -36,8 +37,10 @@ body {
     }
 
     p {
-        line-height: 1.5;
+        line-height: 1.8;
         font-weight: 400;
+        font-size: 1rem;
+        font-size: $font-clamp-sm;
     }
 }
 main {
