--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,5 +1,4 @@
 // contact
-// padding: 0 5vw;
     #contact {
         // border: 2px solid red;
         scroll-margin-top: 5vh;
@@ -31,15 +30,11 @@
                 grid-template-columns: 1fr 1fr 1fr;
                 column-gap: 5vw;
             }
-            // display: flex;
-            // flex-direction: column;
-            // gap: 10vh;
             margin-top: 5vh;
 
             .contact-item {
                 padding: .5rem;
                 padding: .25rem .5rem 1rem 1rem;
-                // border: 2px solid blue;
                 background: #fff;
                 border-radius: .25rem;
                 box-shadow: .5rem .5rem .5rem rgba(0,0, 0, .05);
@@ -51,6 +46,10 @@
                     font-size: 1rem;
                     transition: .25s;
                     position: relative;
+                    h3 {
+                        font-size: 1rem;
+                        font-size: $font-clamp-sm;
+                    }
                     i {
                         transform: translateY(-1rem) scale(1.1);
                         font-size: 2rem;
@@ -69,7 +68,6 @@
                         letter-spacing: 1rem;
                         transition: .5s;
                         opacity: .5;
-                        // transform: rotate(-40deg);
                     }
                 }
 
@@ -109,256 +107,6 @@
                     }
                 }
             }
-            // padding: 1rem;
-            // @include xlg {
-            //     // border: 2px solid red;
-            //     width: 100%;
-            //     flex-direction: row;
-            //     justify-content: space-between;
-            //     flex-wrap: nowrap;
-            //     margin: 5vh auto;
-            //     gap: 1rem;
-            // }
-            // contact-item
-            // .contact-item {
-            //     // border: 2px solid $overlay-blue-darker;
-            //     background: #fff;
-            //     width: 100%;
-            //     display: flex;
-            //     justify-content: flex-start;
-            //     gap: 1rem;
-            //     color: $overlay-blue-darkest;
-            //     text-align: center;
-            //     // margin: 5vh auto;
-                
-            //     position: relative;
-            //     border-radius: .5rem;
-            //     transform: preserve-3d;
-            //     overflow: hidden;
-            //     transition: .5s ease;
-            //     isolation: isolate;
-            //     box-shadow: 0rem .5rem 1rem rgba(41, 50, 60, .2);
-            //     @include sm {
-            //         gap: 1rem;
-            //         border-color: transparent;
-            //     }
-            //     .title {
-            //         // border: 2px solid yellow;
-            //         display: flex;
-            //         flex-direction: column-reverse;
-            //         align-items: left;
-            //         justify-content: space-evenly;
-            //         background: $overlay-blue-darkest;
-            //         padding: .5rem;
-            //         flex-basis: 35%;
-            //         border-radius: .5rem;
-            //         border-top-right-radius: 0;
-            //         border-bottom-right-radius: 0;
-
-
-            //         @include md {
-            //             flex-basis: 40%;
-            //             align-items: center;
-            //             padding: 1rem;
-            //         }
-
-            //         // ITEM ICON
-            //         .icon {
-            //             margin: .5rem auto 1rem;
-            //             padding: .3em .7em;
-            //             height: 4em;
-            //             width: 4em;
-            //             border: none;
-            //             background: $overlay-blue-dark;
-            //             border-radius: 50%;
-            //             // outline: 2px solid #fff2;
-            //             position: relative;
-            //             display: grid;
-            //             place-items: center;
-            //             transition: .5s ease;
-            //             position: relative;
-            //             i {
-            //                 font-size: 1.5rem;
-            //                 color: $text-light;
-            //                 transition: .5s ease;
-            //             }
-
-            //             @media (min-width: 768px) {
-            //                 height: 4rem;
-            //                 width: 4rem;
-            //                 // margin: .3em auto;
-            //                 margin: 0;
-            //                 padding: 0;
-            //             }
-            //         }
-
-            //         h3 {
-            //             // display: none;
-            //             color: $text-light;
-            //             color: $brand;
-            //             font-size: .85rem;
-            //             font-weight: 600;
-            //             position: relative;
-            //             text-transform: uppercase;
-
-            //             @media (min-width: 768px) {
-            //                 font-size: 1rem;
-            //                 margin: .5em auto 0;
-            //             }
-
-            //         }
-            //     }
-            //     // CONTACT DETAILS
-            //     .contact-info {
-            //         // width: 100%;
-            //         flex-basis: 70%;
-            //         // border: 2px solid green;
-            //         padding: 1rem 0;
-            //         h4 {
-            //             text-transform: capitalize;
-            //             text-align: left;
-            //             margin-bottom: .25rem;
-            //             font-size: $font-clamp-h4;
-            //         }
-            //         p {
-            //             font-size: 1rem;
-            //             font-weight: 500;
-            //             // background: $background-light;
-            //             // margin: .5em auto;
-            //             margin-bottom: .5rem;
-            //             color: $overlay-blue-darker;
-            //             color: #000;
-            //             transition: .5s ease;
-            //             position: relative;
-            //             text-align: left;
-            //             z-index: -1;
-
-            //             span {
-            //                 display: block;
-            //                 margin-top: .2em;
-            //                 color: $text-black;
-            //                 color: inherit;
-            //                 opacity: .8;
-            //             }
-                        
-            //             @media (min-width: 768px){
-            //                 width: 100%;
-            //                 // text-align: center;
-            //                 margin: .5em auto;
-            //                 font-size: .9em;
-            //             }
-            //             // end of details shadow
-            //         }
-            //         // LINK
-            //         a {
-            //             i {
-            //                 opacity: .3;
-            //                 transition: 1s ease;
-            //             }
-            //         }
-            //         // end of form link
-
-            //     }
-            //     // CURSORS
-            //     &:nth-child(1){
-            //         cursor: help;
-            //     }
-            //     &:nth-child(2){
-            //         cursor: alias;
-            //     }
-            //     &:nth-child(3){
-            //         cursor: alias;
-            //     }
-            //     // ITEM HOVER STATE
-            //     &:hover {
-            //         // TURN OFF ICON PULSE ON HOVER
-            //         box-shadow: 0rem .25rem .5rem rgba(41, 50, 60, .2);
-            //         .title {
-            //             .icon {
-            //                 background: $overlay-blue-darkest;
-            //                 border: 1px solid $brand-border;
-            //                 &::after {
-            //                     opacity: 0;
-            //                     transition: 1s;
-            //                 }
-            //                 // TRANSITION IN ICON ON HOVER
-            //                 i {
-            //                     // color: $brand;
-            //                     // opacity: .8;
-            //                     transform: scale(.95);
-            //                 }
-            //             }
-            //         }
-                    
-            //         .contact-info {
-
-            //             a {
-            //                 opacity: 1;
-
-            //                 i {
-            //                     opacity: 1;
-            //                     transition: .25s;
-            //                 }
-            //             }
-            //         }
-            //     }
-            //     // END OF ITEM HOVER STATE
-
-            //     // IO CLASS 
-            //     // &.io-item {
-            //     //     .title {
-            //     //         // transform: translateY(100%);
-            //     //         opacity: 1;
-            //     //         transition: 1.5s;
-            //     //         .icon {
-            //     //             // transform: scale(.5);
-            //     //             // transition: 1s;
-            //     //         }
-            //     //     }
-            //     //     .contact-info {
-            //     //         h4 {
-            //     //             opacity: 0;
-            //     //             transform: translateX(1rem);
-            //     //             transition: 1s;
-            //     //         }
-            //     //         p {
-            //     //             opacity: 0;
-            //     //             transform: translateX(1rem);
-            //     //             transition: 1s;
-            //     //         }
-            //     //         a {
-            //     //             transform: translateY(10vh);
-            //     //             transition: 1s;
-            //     //             transition-timing-function: ease-in-out;
-            //     //         }
-            //     //     }
-            //     // }
-            //     // &.active-item {
-            //     //     .title {
-            //     //         transform: translateY(0vh);
-            //     //         opacity: 1;
-            //     //         .icon {
-            //     //             transform: scale(1);
-            //     //         }
-            //     //     }
-            //     //     .contact-info {
-            //     //         h4 {
-            //     //             opacity: 1;
-            //     //             transform: translateX(0);
-            //     //             transition-delay: .25s;
-            //     //         }
-            //     //         p,a {
-            //     //             opacity: 1;
-            //     //             transform: translateX(0);
-            //     //             transition-delay: .5s;
-            //     //         }
-            //     //         a {
-            //     //             transition-delay: .5s;
-            //     //         }
-            //     //     }
-            //     // }
-            // }
-            // END OF CONTACT ITEM
         }
 
     }
