--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -94,7 +94,7 @@
     }
     // PAGE HERO CONTENT
     .hero-content {
-        border: 1px solid #fff;
+        // border: 1px solid #fff;
         background: transparent;
         padding: 5vh 5vw;
         position: relative;
