--- a/css/style.css
+++ b/css/style.css
@@ -180,21 +180,19 @@
 }
 
 .btn {
-  border: 2px solid #000;
-  padding: 0.8rem 1rem;
-  border: none;
-  border-radius: 0.25rem;
-  text-align: center;
-  letter-spacing: 0.025rem;
-  transition: 0.2s;
-  text-transform: capitalize;
-  isolation: isolate;
-  position: relative;
-  width: 10rem;
-  min-width: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.8rem 1rem;
+  min-width: 9.5rem;
+  width: 10rem;
+  text-align: center;
+  letter-spacing: 0.025rem;
+  text-transform: capitalize;
+  position: relative;
+  isolation: isolate;
+  border-radius: 0.25rem;
+  transition: 0.25s;
 }
 @media (max-width: 450px) {
   .btn {
@@ -208,7 +206,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 0.25rem;
+  border-radius: inherit;
   transition: 0.2s;
   z-index: -1;
 }
@@ -1862,7 +1860,6 @@
   padding: 10vh 5vw;
   background-color: #fff;
   position: relative;
-  min-height: 100vh;
 }
 @media (min-width: 768px) {
   .about {
@@ -1871,26 +1868,7 @@
   }
 }
 .about .col-right {
-  width: 100%;
-  height: auto;
-  z-index: 20;
-  background: #fff;
-  border-radius: 5px;
   position: relative;
-}
-.about .col-right .section-title {
-  text-align: left;
-  margin-top: 5vh;
-}
-.about .col-right .section-title::after {
-  width: 80%;
-}
-@media (min-width: 768px) {
-  .about .col-right {
-    width: 100%;
-    margin: 0;
-    height: 100%;
-  }
 }
 .about .col-right .article-container article .about-intro p {
   font-weight: 500;
@@ -2000,17 +1978,12 @@
 .about .col-right .article-container article .article-body .body-item:hover::after {
   opacity: 1;
 }
-.about .col-right:hover #cv-download {
-  transition: 1s ease;
-  transform: translateY(100%);
-  opacity: 1;
-}
 .about .col-left {
   border-radius: 0.25rem;
-  width: 100%;
+  width: 70%;
   height: 60vh;
-  margin-top: 0;
-  z-index: 20;
+  margin-inline: auto;
+  margin-bottom: 5vh;
 }
 @media (max-width: 450px) {
   .about .col-left {
@@ -2026,15 +1999,11 @@
   }
 }
 .about .col-left .about-img {
-  border: none;
-  width: 70%;
+  width: 100%;
   height: 100%;
-  margin-inline: auto;
   position: relative;
   border-radius: 0.25rem;
   transition: 0.5s ease;
-  transform: preserve-3d;
-  overflow: hidden;
 }
 .about .col-left .about-img img {
   position: absolute;
@@ -2043,7 +2012,7 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 0.25rem;
+  border-radius: inherit;
   transition: 1s;
   animation: fade-1 4s infinite;
 }
