--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -210,21 +210,22 @@
 
 // CTA BUTTONS
 .btn {
-    border: 2px solid #000;
-    padding: .8rem 1rem;
-    border: none;
-    border-radius: .25rem;
-    text-align: center;
-    letter-spacing: .025rem;
-    transition: .2s;
-    text-transform: capitalize;
-    isolation: isolate;
-    position: relative;
-    width: 10rem;
-    min-width: 6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    padding: .8rem 1rem;
+    min-width: 9.5rem;
+    width: 10rem;
+
+    text-align: center;
+    letter-spacing: .025rem;
+    text-transform: capitalize;
+
+    position: relative;
+    isolation: isolate;
+    border-radius: $brand-br;
+    transition: .25s;
     @include xsm {
         cursor: default;
     }
@@ -236,7 +237,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        border-radius: .25rem;
+        border-radius: inherit;
         transition: .2s;
         z-index: -1;
     }
